@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -63,6 +63,8 @@ import javafx.util.BuilderFactory;
 import javafx.util.Callback;
 
 import javax.script.Bindings;
+import javax.script.Compilable;
+import javax.script.CompiledScript;
 import javax.script.ScriptContext;
 import javax.script.ScriptEngine;
 import javax.script.ScriptEngineManager;
@@ -109,6 +111,7 @@ public class FXMLLoader {
         new RuntimePermission("getClassLoader");
 
     // Instance of StackWalker used to get caller class (must be private)
+    @SuppressWarnings("removal")
     private static final StackWalker walker =
         AccessController.doPrivileged((PrivilegedAction<StackWalker>) () ->
             StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE));
@@ -120,10 +123,10 @@ public class FXMLLoader {
         public Object value = null;
         private BeanAdapter valueAdapter = null;
 
-        public final LinkedList<Attribute> eventHandlerAttributes = new LinkedList<Attribute>();
-        public final LinkedList<Attribute> instancePropertyAttributes = new LinkedList<Attribute>();
-        public final LinkedList<Attribute> staticPropertyAttributes = new LinkedList<Attribute>();
-        public final LinkedList<PropertyElement> staticPropertyElements = new LinkedList<PropertyElement>();
+        public final LinkedList<Attribute> eventHandlerAttributes = new LinkedList<>();
+        public final LinkedList<Attribute> instancePropertyAttributes = new LinkedList<>();
+        public final LinkedList<Attribute> staticPropertyAttributes = new LinkedList<>();
+        public final LinkedList<PropertyElement> staticPropertyElements = new LinkedList<>();
 
         public Element() {
             parent = current;
@@ -150,7 +153,7 @@ public class FXMLLoader {
         }
 
         @SuppressWarnings("unchecked")
-        public void add(Object element) throws LoadException {
+        public void add(Object element) {
             // If value is a list, add element to it; otherwise, get the value
             // of the default property, which is assumed to be a list and add
             // to that (coerce to the appropriate type)
@@ -228,6 +231,9 @@ public class FXMLLoader {
             }
         }
 
+        /**
+         * @throws IOException when I/O by implementation fails
+         */
         public void processEndElement() throws IOException {
             // No-op
         }
@@ -291,7 +297,6 @@ public class FXMLLoader {
             }
         }
 
-        @SuppressWarnings("unchecked")
         public void processPropertyAttribute(Attribute attribute) throws IOException {
             String value = attribute.value;
             if (isBindingExpression(value)) {
@@ -492,7 +497,7 @@ public class FXMLLoader {
             // Split the string and add the values to the list
             List<Object> list = (List<Object>)valueAdapter.get(listPropertyName);
             Type listType = valueAdapter.getGenericType(listPropertyName);
-            Type itemType = (Class<?>)BeanAdapter.getGenericListItemType(listType);
+            Type itemType = BeanAdapter.getGenericListItemType(listType);
 
             if (itemType instanceof ParameterizedType) {
                 itemType = ((ParameterizedType)itemType).getRawType();
@@ -933,14 +938,12 @@ public class FXMLLoader {
                         try {
                             if (controllerFactory == null) {
                                 ReflectUtil.checkPackageAccess(type);
-                                setController(type.newInstance());
+                                setController(type.getDeclaredConstructor().newInstance());
                             } else {
                                 setController(controllerFactory.call(type));
                             }
-                        } catch (InstantiationException exception) {
-                            throw constructLoadException(exception);
-                        } catch (IllegalAccessException exception) {
-                            throw constructLoadException(exception);
+                        } catch (Exception e) {
+                            throw constructLoadException(e);
                         }
                     }
                 } else {
@@ -961,7 +964,7 @@ public class FXMLLoader {
         public String constant = null;
         public String factory = null;
 
-        public InstanceDeclarationElement(Class<?> type) throws LoadException {
+        public InstanceDeclarationElement(Class<?> type) {
             this.type = type;
         }
 
@@ -1016,11 +1019,9 @@ public class FXMLLoader {
                 if (value == null) {
                     try {
                         ReflectUtil.checkPackageAccess(type);
-                        value = type.newInstance();
-                    } catch (InstantiationException exception) {
-                        throw constructLoadException(exception);
-                    } catch (IllegalAccessException exception) {
-                        throw constructLoadException(exception);
+                        value = type.getDeclaredConstructor().newInstance();
+                    } catch (Exception e) {
+                        throw constructLoadException(e);
                     }
                 }
             }
@@ -1034,8 +1035,8 @@ public class FXMLLoader {
         // Map type representing an unknown value
         @DefaultProperty("items")
         public class UnknownValueMap extends AbstractMap<String, Object> {
-            private ArrayList<?> items = new ArrayList<Object>();
-            private HashMap<String, Object> values = new HashMap<String, Object>();
+            private ArrayList<?> items = new ArrayList<>();
+            private HashMap<String, Object> values = new HashMap<>();
 
             @Override
             public Object get(Object key) {
@@ -1326,11 +1327,9 @@ public class FXMLLoader {
                     if (value == null) {
                         try {
                             ReflectUtil.checkPackageAccess(type);
-                            value = type.newInstance();
-                        } catch (InstantiationException exception) {
-                            throw constructLoadException(exception);
-                        } catch (IllegalAccessException exception) {
-                            throw constructLoadException(exception);
+                            value = type.getDeclaredConstructor().newInstance();
+                        } catch (Exception e) {
+                            throw constructLoadException(e);
                         }
                     }
                     root = value;
@@ -1404,7 +1403,7 @@ public class FXMLLoader {
         }
 
         @Override
-        public void add(Object element) throws LoadException {
+        public void add(Object element) {
             // Coerce the element to the list item type
             if (parent.isTyped()) {
                 Type listType = parent.getValueAdapter().getGenericType(name);
@@ -1558,21 +1557,55 @@ public class FXMLLoader {
                         location = new URL(FXMLLoader.this.location, source);
                     }
                     Bindings engineBindings = engine.getBindings(ScriptContext.ENGINE_SCOPE);
-                    engineBindings.put(engine.FILENAME, location.getPath());
+                    String filename = location.getPath();
+                    engineBindings.put(engine.FILENAME, filename);
 
                     InputStreamReader scriptReader = null;
+                    String script = null;
                     try {
                         scriptReader = new InputStreamReader(location.openStream(), charset);
-                        engine.eval(scriptReader);
-                    } catch(ScriptException exception) {
-                        exception.printStackTrace();
+                        StringBuilder sb = new StringBuilder();
+                        final int bufSize = 4096;
+                        char[] charBuffer = new char[bufSize];
+                        int n;
+                        do {
+                            n = scriptReader.read(charBuffer,0,bufSize);
+                            if (n > 0) {
+                                sb.append(new String(charBuffer,0,n));
+                          }
+                        } while (n > -1);
+                        script = sb.toString();
+                    } catch (IOException exception) {
+                        throw constructLoadException(exception);
                     } finally {
                         if (scriptReader != null) {
                             scriptReader.close();
                         }
                     }
-                } catch (IOException exception) {
-                    throw constructLoadException(exception);
+                    try {
+                        if (engine instanceof Compilable && compileScript) {
+                            CompiledScript compiledScript = null;
+                            try {
+                                compiledScript = ((Compilable) engine).compile(script);
+                            } catch (ScriptException compileExc) {
+                                Logging.getJavaFXLogger().warning(filename + ": compiling caused \"" + compileExc +
+                                    "\", falling back to evaluating script in uncompiled mode");
+                            }
+                            if (compiledScript != null) {
+                                compiledScript.eval();
+                            } else { // fallback to uncompiled mode
+                                engine.eval(script);
+                            }
+                        } else {
+                            engine.eval(script);
+                        }
+                    } catch (ScriptException exception) {
+                        System.err.println(filename + ": caused ScriptException");
+                        exception.printStackTrace();
+                    }
+                }
+                catch (IOException exception) {
+                  throw constructLoadException(exception);
                 }
             }
         }
@@ -1583,13 +1616,31 @@ public class FXMLLoader {
 
             if (value != null && !staticLoad) {
                 // Evaluate the script
+                String filename = null;
                 try {
                     Bindings engineBindings = scriptEngine.getBindings(ScriptContext.ENGINE_SCOPE);
-                    engineBindings.put(scriptEngine.FILENAME, location.getPath() + "-script_starting_at_line_"
-                                       + (getLineNumber() - (int) ((String) value).codePoints().filter(c -> c == '\n').count()));
-                    scriptEngine.eval((String)value);
+                    String script = (String) value;
+                    filename = location.getPath() + "-script_starting_at_line_"
+                                       + (getLineNumber() - (int) script.codePoints().filter(c -> c == '\n').count());
+                    engineBindings.put(scriptEngine.FILENAME, filename);
+                    if (scriptEngine instanceof Compilable && compileScript) {
+                        CompiledScript compiledScript = null;
+                        try {
+                            compiledScript = ((Compilable) scriptEngine).compile(script);
+                        } catch (ScriptException compileExc) {
+                            Logging.getJavaFXLogger().warning(filename + ": compiling caused \"" + compileExc +
+                                "\", falling back to evaluating script in uncompiled mode");
+                        }
+                        if (compiledScript != null) {
+                            compiledScript.eval();
+                        } else { // fallback to uncompiled mode
+                            scriptEngine.eval(script);
+                        }
+                    } else {
+                        scriptEngine.eval(script);
+                    }
                 } catch (ScriptException exception) {
-                    System.err.println(exception.getMessage());
+                    System.err.println(filename + ": caused ScriptException\n" + exception.getMessage());
                 }
             }
         }
@@ -1681,11 +1732,24 @@ public class FXMLLoader {
         public final String script;
         public final ScriptEngine scriptEngine;
         public final String filename;
+        public CompiledScript compiledScript;
+        public boolean isCompiled = false;
 
         public ScriptEventHandler(String script, ScriptEngine scriptEngine, String filename) {
             this.script = script;
             this.scriptEngine = scriptEngine;
             this.filename = filename;
+            if (scriptEngine instanceof Compilable  && compileScript) {
+                try {
+                    // supply the filename to the scriptEngine engine scope Bindings in case it is needed for compilation
+                    scriptEngine.getBindings(ScriptContext.ENGINE_SCOPE).put(scriptEngine.FILENAME, filename);
+                    this.compiledScript = ((Compilable) scriptEngine).compile(script);
+                    this.isCompiled = true;
+                } catch (ScriptException compileExc) {
+                    Logging.getJavaFXLogger().warning(filename + ": compiling caused \"" + compileExc +
+                        "\", falling back to evaluating script in uncompiled mode");
+                }
+            }
         }
 
         @Override
@@ -1699,9 +1763,13 @@ public class FXMLLoader {
             localBindings.put(scriptEngine.FILENAME, filename);
             // Execute the script
             try {
-                scriptEngine.eval(script, localBindings);
-            } catch (ScriptException exception){
-                throw new RuntimeException(exception);
+                if (isCompiled) {
+                   compiledScript.eval(localBindings);
+                } else {
+                   scriptEngine.eval(script, localBindings);
+                }
+            } catch (ScriptException exception) {
+                throw new RuntimeException(filename + ": caused ScriptException", exception);
             }
         }
     }
@@ -1715,7 +1783,6 @@ public class FXMLLoader {
         }
 
         @Override
-        @SuppressWarnings("unchecked")
         public void onChanged(Change change) {
             if (handler != null) {
                 handler.invoke(change);
@@ -1819,9 +1886,10 @@ public class FXMLLoader {
     private Element current = null;
 
     private ScriptEngine scriptEngine = null;
+    private static boolean compileScript = true;
 
-    private List<String> packages = new LinkedList<String>();
-    private Map<String, Class<?>> classes = new HashMap<String, Class<?>>();
+    private List<String> packages = new LinkedList<>();
+    private Map<String, Class<?>> classes = new HashMap<>();
 
     private ScriptEngineManager scriptEngineManager = null;
 
@@ -1844,6 +1912,12 @@ public class FXMLLoader {
      * The tag name of import processing instruction.
      */
     public static final String IMPORT_PROCESSING_INSTRUCTION = "import";
+
+    /**
+     * The tag name of the compile processing instruction.
+     * @since 15
+     */
+    public static final String COMPILE_PROCESSING_INSTRUCTION = "compile";
 
     /**
      * Prefix of 'fx' namespace.
@@ -2050,12 +2124,14 @@ public class FXMLLoader {
     public static final String FX_NAMESPACE_VERSION = "1";
 
     static {
-        JAVAFX_VERSION = AccessController.doPrivileged(new PrivilegedAction<String>() {
+        @SuppressWarnings("removal")
+        String tmp = AccessController.doPrivileged(new PrivilegedAction<String>() {
             @Override
             public String run() {
                 return System.getProperty("javafx.version");
             }
         });
+        JAVAFX_VERSION = tmp;
 
         FXMLLoaderHelper.setFXMLLoaderAccessor(new FXMLLoaderHelper.FXMLLoaderAccessor() {
             @Override
@@ -2246,6 +2322,13 @@ public class FXMLLoader {
         return false;
     }
 
+    @Override
+    public int hashCode() {
+        int h = FXMLLoader.class.hashCode();
+        h = 31 * h + (location == null ? 0 : location.toExternalForm().hashCode());
+        return h;
+    }
+
     private boolean isCyclic(
                             FXMLLoader currentLoader,
                             FXMLLoader node) {
@@ -2356,6 +2439,7 @@ public class FXMLLoader {
      */
     public ClassLoader getClassLoader() {
         if (classLoader == null) {
+            @SuppressWarnings("removal")
             final SecurityManager sm = System.getSecurityManager();
             final Class caller = (sm != null) ?
                     walker.getCallerClass() :
@@ -2435,6 +2519,7 @@ public class FXMLLoader {
      *
      * @since JavaFX 2.1
      */
+    @SuppressWarnings("removal")
     public <T> T load() throws IOException {
         return loadImpl((System.getSecurityManager() != null)
                             ? walker.getCallerClass()
@@ -2450,6 +2535,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public <T> T load(InputStream inputStream) throws IOException {
         return loadImpl(inputStream, (System.getSecurityManager() != null)
                                          ? walker.getCallerClass()
@@ -2477,7 +2563,7 @@ public class FXMLLoader {
         return value;
     }
 
-    @SuppressWarnings({ "dep-ann", "unchecked" })
+    @SuppressWarnings("unchecked")
     private <T> T loadImpl(InputStream inputStream,
                            Class<?> callerClass) throws IOException {
         if (inputStream == null) {
@@ -2678,6 +2764,10 @@ public class FXMLLoader {
             processLanguage();
         } else if (piTarget.equals(IMPORT_PROCESSING_INSTRUCTION)) {
             processImport();
+        } else if (piTarget.equals(COMPILE_PROCESSING_INSTRUCTION)) {
+            String strCompile = xmlStreamReader.getPIData().trim();
+            // if PIData() is empty string then default to true, otherwise use Boolean.parseBoolean(string) to determine the boolean value
+            compileScript = (strCompile.length() == 0 ? true : Boolean.parseBoolean(strCompile));
         }
     }
 
@@ -2712,7 +2802,7 @@ public class FXMLLoader {
         }
     }
 
-    private void processComment() throws LoadException {
+    private void processComment() {
         if (loadListener != null) {
             loadListener.readComment(xmlStreamReader.getText());
         }
@@ -2856,7 +2946,7 @@ public class FXMLLoader {
         }
     }
 
-    private void importPackage(String name) throws LoadException {
+    private void importPackage(String name) {
         packages.add(name);
     }
 
@@ -2868,7 +2958,7 @@ public class FXMLLoader {
         }
     }
 
-    private Class<?> getType(String name) throws LoadException {
+    private Class<?> getType(String name) {
         Class<?> type = null;
 
         if (Character.isLowerCase(name.charAt(0))) {
@@ -3054,6 +3144,7 @@ public class FXMLLoader {
 
     private static ClassLoader getDefaultClassLoader(Class caller) {
         if (defaultClassLoader == null) {
+            @SuppressWarnings("removal")
             final SecurityManager sm = System.getSecurityManager();
             if (sm != null) {
                 if (needsClassLoaderPermissionCheck(caller)) {
@@ -3071,6 +3162,7 @@ public class FXMLLoader {
      * @since JavaFX 2.1
      */
     public static ClassLoader getDefaultClassLoader() {
+        @SuppressWarnings("removal")
         final SecurityManager sm = System.getSecurityManager();
         final Class caller = (sm != null) ?
                 walker.getCallerClass() :
@@ -3089,6 +3181,7 @@ public class FXMLLoader {
         if (defaultClassLoader == null) {
             throw new NullPointerException();
         }
+        @SuppressWarnings("removal")
         final SecurityManager sm = System.getSecurityManager();
         if (sm != null) {
             sm.checkPermission(MODIFY_FXML_CLASS_LOADER_PERMISSION);
@@ -3106,6 +3199,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location) throws IOException {
         return loadImpl(location, (System.getSecurityManager() != null)
                                       ? walker.getCallerClass()
@@ -3127,6 +3221,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources)
                                      throws IOException {
         return loadImpl(location, resources,
@@ -3152,6 +3247,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources,
                              BuilderFactory builderFactory)
                                      throws IOException {
@@ -3181,6 +3277,7 @@ public class FXMLLoader {
      *
      * @since JavaFX 2.1
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources,
                              BuilderFactory builderFactory,
                              Callback<Class<?>, Object> controllerFactory)
@@ -3214,6 +3311,7 @@ public class FXMLLoader {
      *
      * @since JavaFX 2.1
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources,
                              BuilderFactory builderFactory,
                              Callback<Class<?>, Object> controllerFactory,
@@ -3320,6 +3418,7 @@ public class FXMLLoader {
     }
 
     private static void checkClassLoaderPermission() {
+        @SuppressWarnings("removal")
         final SecurityManager securityManager = System.getSecurityManager();
         if (securityManager != null) {
             securityManager.checkPermission(MODIFY_FXML_CLASS_LOADER_PERMISSION);
@@ -3440,7 +3539,8 @@ public class FXMLLoader {
                                  membersType);
 
             final int finalAllowedMemberAccess = allowedMemberAccess;
-            AccessController.doPrivileged(
+            @SuppressWarnings("removal")
+            var dummy = AccessController.doPrivileged(
                     new PrivilegedAction<Void>() {
                         @Override
                         public Void run() {
